--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,4 +5,15 @@
     <!-- Paranoid -->
     <string name="paranoid_dashboard_title">Extended Hub</string>
 
+    <string name="category_name_network_traffic">Network traffic</string>
+
+    <!-- Status bar - Network Traffic -->
+    <string name="network_traffic_settings_title">Network traffic monitor</string>
+    <string name="network_traffic_settings_summary">Show current network traffic levels in the status bar</string>
+    <string name="network_traffic_autohide">Auto hide</string>
+    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
+    <string name="network_traffic_units_title">Traffic measurement units</string>
+    <string name="network_traffic_units_bits" translatable="false">kbps, Mbps, Gbps</string>
+    <string name="network_traffic_units_bytes" translatable="false">kB/s, MB/s, GB/s</string>
+
 </resources>
