--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -61,4 +61,8 @@
     <string name="power_menu_lock_screen_secure_title">Power menu</string>
     <string name="power_menu_lock_screen_secure_summary">Interact with power menu on secured lockscreen without authentication</string>
 
+    <!-- Secure lock screen QS -->
+    <string name="qs_lock_screen_secure_title">Quick settings</string>
+    <string name="qs_lock_screen_secure_summary">Interact with quick settings on secured lockscreen without authentication</string>
+
 </resources>
